# InjectionLiteSampleBazelProject

./: .gitignore  BUILD  MODULE.bazel  Makefile  Package.resolved  Package.swift  README.md
AppCore/: BUILD  ServiceLocator.swift  ToDoModels.swift
Auth/: BUILD  LoginViewController.swift
DataAnalytics/: AnalyticsView.swift  AnalyticsViewController.swift  BUILD  ChartData.swift  DataProcessor.h  DataProcessor.m
InjectionLiteSampleBazelProject/: ContentView.swift  ContentView2.swift  Info.plist  InjectionLiteSampleBazelProjectApp.swift  UIKitBridges.swift
InjectionLiteSampleBazelProject.xcodeproj/: project.pbxproj
InjectionLiteSampleBazelProjectTests/: InjectionLiteSampleBazelProjectTests.swift
InjectionLiteSampleBazelProjectUITests/: InjectionLiteSampleBazelProjectUITests.swift  InjectionLiteSampleBazelProjectUITestsLaunchTests.swift
Navigation/: BUILD  Navigator.swift
NetworkService/: BUILD  MockAPIService.swift  NetworkModels.swift  NetworkServiceView.swift  NetworkServiceViewController.swift
Reminders/: BUILD  ReminderViewController.swift
Settings/: BUILD  SettingDetailViewController.swift  SettingsViewController.swift
Sharing/: BUILD  ShareViewController.swift
ToDoCreate/: BUILD  ToDoCreateViewController.swift
ToDoDetail/: BUILD  ToDoDetailViewController.swift
ToDoList/: BUILD  ToDoListViewController.swift
UserProfile/: BUILD  EditProfileViewController.swift  UserProfileModel.swift  UserProfileView.swift  UserProfileViewController.swift
tools/: bazel
tools/injection/: notify-watch.py
(+28 files in other folders)
